--- a/pull/58/functions/init.html
+++ b/pull/58/functions/init.html
@@ -33,11 +33,11 @@
 <h5><span class="tsd-kind-parameter">configIn</span>: <a href="../interfaces/ConfigOptions.html" class="tsd-signature-type tsd-kind-interface">ConfigOptions</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 <div class="tsd-comment tsd-typography">
-<h4>Example</h4><pre><code class="language-ts"><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">init</span><span class="hl-5">({</span><span class="hl-7">tenantAlias:</span><span class="hl-9">&#39;test_basbtabstq51v&#39;</span><span class="hl-5">});</span>
+<h4>Example</h4><pre><code class="language-ts"><span class="hl-7">squatch</span><span class="hl-5">.</span><span class="hl-8">init</span><span class="hl-5">({</span><br/><span class="hl-5">  </span><span class="hl-7">tenantAlias:</span><span class="hl-9">&#39;test_basbtabstq51v&#39;</span><span class="hl-5">,</span><br/><span class="hl-5">});</span>
 </code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/squatch.ts#L140">src/squatch.ts:140</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/squatch.ts#L143">src/squatch.ts:143</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -75,8 +75,7 @@
 <li><a href="../types/WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
 <li><a href="../types/WidgetType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Type</span></a></li>
 <li><a href="../types/WithRequired.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>With<wbr/>Required</span></a></li>
-<li><a href="_auto.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>_auto</span></a></li>
-<li><a href="api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>api</span></a></li>
+<li><a href="api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>api</span></a></li>
 <li><a href="autofill.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>autofill</span></a></li>
 <li><a href="events.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>events</span></a></li>
 <li><a href="help.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>help</span></a></li>
