--- a/pull/58/functions/ready.html
+++ b/pull/58/functions/ready.html
@@ -42,7 +42,7 @@ function detects that state.</p>
 </code><button>Copy</button></pre>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/squatch.ts#L169">src/squatch.ts:169</a></li></ul></aside></li></ul></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/squatch.ts#L172">src/squatch.ts:172</a></li></ul></aside></li></ul></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -80,8 +80,7 @@ function detects that state.</p>
 <li><a href="../types/WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
 <li><a href="../types/WidgetType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Type</span></a></li>
 <li><a href="../types/WithRequired.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>With<wbr/>Required</span></a></li>
-<li><a href="_auto.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>_auto</span></a></li>
-<li><a href="api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>api</span></a></li>
+<li><a href="api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>api</span></a></li>
 <li><a href="autofill.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>autofill</span></a></li>
 <li><a href="events.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>events</span></a></li>
 <li><a href="help.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>help</span></a></li>
