--- a/pull/58/interfaces/WidgetResult.html
+++ b/pull/58/interfaces/WidgetResult.html
@@ -28,7 +28,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">WidgetResult</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/types.ts#L62">src/types.ts:62</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/types.ts#L62">src/types.ts:62</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -45,12 +45,12 @@
 <h3 class="tsd-anchor-link"><span>user</span><a href="#user" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><g stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" id="icon-anchor"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5"></path></g></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">user</span><span class="tsd-signature-symbol">:</span> <a href="../types/User.html" class="tsd-signature-type tsd-kind-type-alias">User</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/types.ts#L64">src/types.ts:64</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/types.ts#L64">src/types.ts:64</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="widget" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>widget</span><a href="#widget" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">widget</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">default</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/types.ts#L63">src/types.ts:63</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/types.ts#L63">src/types.ts:63</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -94,8 +94,7 @@
 <li><a href="../types/WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
 <li><a href="../types/WidgetType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Type</span></a></li>
 <li><a href="../types/WithRequired.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>With<wbr/>Required</span></a></li>
-<li><a href="../functions/_auto.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>_auto</span></a></li>
-<li><a href="../functions/api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>api</span></a></li>
+<li><a href="../functions/api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>api</span></a></li>
 <li><a href="../functions/autofill.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>autofill</span></a></li>
 <li><a href="../functions/events.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>events</span></a></li>
 <li><a href="../functions/help.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>help</span></a></li>
