--- a/pull/58/types/WidgetType.html
+++ b/pull/58/types/WidgetType.html
@@ -20,7 +20,7 @@
 </div>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/6ce997c/src/types.ts#L108">src/types.ts:108</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/saasquatch/squatch-js/blob/2b98f85/src/types.ts#L108">src/types.ts:108</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -58,8 +58,7 @@
 <li><a href="WidgetContextType.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Context<wbr/>Type</span></a></li>
 <li><a href="WidgetType.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>Widget<wbr/>Type</span></a></li>
 <li><a href="WithRequired.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-4194304"></use></svg><span>With<wbr/>Required</span></a></li>
-<li><a href="../functions/_auto.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>_auto</span></a></li>
-<li><a href="../functions/api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>api</span></a></li>
+<li><a href="../functions/api.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>api</span></a></li>
 <li><a href="../functions/autofill.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>autofill</span></a></li>
 <li><a href="../functions/events.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>events</span></a></li>
 <li><a href="../functions/help.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-64"></use></svg><span>help</span></a></li>
